--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     </style>
   </head>
 <body>
-hello world
+  Hello. My name is Patryk Swierzbinski. I made a game about loneliness.
+  <br><br>
+  <img src="https://GamingBlur.github.io/twinegame/images/GIF3.gif">
+  <br><br>
+  <a href="https://GamingBlur.github.io/twinegame/prison.html">I hope you enjoy it.</a>
 </body>
 </html>
