--- a/prison.html
+++ b/prison.html
@@ -9,33 +9,33 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play prison.</tw-noscript></noscript></tw-story>
-<tw-storydata name="prison" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="9882E839-BFD8-4FDA-93F5-356FF1FF9AC9" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="start" tags="" position="1075,500" size="100,100">(photo 1)
+<tw-storydata name="prison" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="9882E839-BFD8-4FDA-93F5-356FF1FF9AC9" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="start" tags="" position="1075,500" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/1.JPG&quot;&gt;
 
-[[wake up.-&gt;wakeup]]</tw-passagedata><tw-passagedata pid="2" name="wakeup" tags="" position="1200,525" size="100,100">(gif 1)
+[[wake up.-&gt;wakeup]]</tw-passagedata><tw-passagedata pid="2" name="wakeup" tags="" position="1200,525" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/GIF1.gif&quot;&gt;
 
-you awake in your cell. [[stay-&gt;stay]] or [[go-&gt;go]]?</tw-passagedata><tw-passagedata pid="3" name="stay" tags="" position="1225,750" size="100,100">(photo 2)
+you awake in your cell. [[stay-&gt;stay]] or [[go-&gt;go]]?</tw-passagedata><tw-passagedata pid="3" name="stay" tags="" position="1225,750" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/2.JPG&quot;&gt;
 
 it&#39;s not worth it.
 
-[[wake up.-&gt;wakeup]]</tw-passagedata><tw-passagedata pid="4" name="go" tags="" position="1350,525" size="100,100">(gif 2)
+[[wake up.-&gt;wakeup]]</tw-passagedata><tw-passagedata pid="4" name="go" tags="" position="1350,525" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/GIF2.gif&quot;&gt;
 
-[[it&#39;s raining outside.-&gt;towork]]</tw-passagedata><tw-passagedata pid="5" name="towork" tags="" position="1525,500" size="100,100">(photo 3)
+[[it&#39;s raining outside.-&gt;towork]]</tw-passagedata><tw-passagedata pid="5" name="towork" tags="" position="1525,500" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/3.jpg&quot;&gt;
 
 (description 1)
 
-[[go to work.-&gt;work1]]</tw-passagedata><tw-passagedata pid="6" name="work1" tags="" position="1700,525" size="100,100">(photo 4)
+[[go to work.-&gt;work1]]</tw-passagedata><tw-passagedata pid="6" name="work1" tags="" position="1700,525" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/4.JPG&quot;&gt;
 
 [[work.-&gt;work21]]
 
 [[work.-&gt;work22]]
 
-[[work.-&gt;work23]]</tw-passagedata><tw-passagedata pid="7" name="work21" tags="" position="1875,350" size="100,100">(photo 5)
+[[work.-&gt;work23]]</tw-passagedata><tw-passagedata pid="7" name="work21" tags="" position="1875,350" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/5.jpg&quot;&gt;
 
-[[work.-&gt;work3]]</tw-passagedata><tw-passagedata pid="8" name="work22" tags="" position="1875,500" size="100,100">(photo 6)
+[[work.-&gt;work3]]</tw-passagedata><tw-passagedata pid="8" name="work22" tags="" position="1875,500" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/6.jpeg&quot;&gt;
 
-[[work.-&gt;work3]]</tw-passagedata><tw-passagedata pid="9" name="work23" tags="" position="1875,650" size="100,100">(photo 7)
+[[work.-&gt;work3]]</tw-passagedata><tw-passagedata pid="9" name="work23" tags="" position="1875,650" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/7.jpg&quot;&gt;
 
-[[work.-&gt;work3]]</tw-passagedata><tw-passagedata pid="10" name="work3" tags="" position="2050,500" size="100,100">(photo 8)
+[[work.-&gt;work3]]</tw-passagedata><tw-passagedata pid="10" name="work3" tags="" position="2050,500" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/8.jpg&quot;&gt;
 
 (description 2)
 
@@ -45,13 +45,13 @@ it&#39;s not worth it.
 
 [[no.-&gt;no]]</tw-passagedata><tw-passagedata pid="12" name="yes" tags="" position="2225,625" size="100,100">when was the last time you talked to someone?
 
-[[wake up.-&gt;wakeup]]</tw-passagedata><tw-passagedata pid="13" name="no" tags="" position="2400,500" size="100,100">[[fine.-&gt;fromwork]]</tw-passagedata><tw-passagedata pid="14" name="fromwork" tags="" position="2550,500" size="100,100">(photo 9)
+[[wake up.-&gt;wakeup]]</tw-passagedata><tw-passagedata pid="13" name="no" tags="" position="2400,500" size="100,100">[[fine.-&gt;fromwork]]</tw-passagedata><tw-passagedata pid="14" name="fromwork" tags="" position="2550,500" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/9.jpg&quot;&gt;
 
 work&#39;s done.
 
 (description 3)
 
-[[something catches your eye.-&gt;misery]]</tw-passagedata><tw-passagedata pid="15" name="misery" tags="" position="2700,500" size="100,100">(photo 10)
+[[something catches your eye.-&gt;misery]]</tw-passagedata><tw-passagedata pid="15" name="misery" tags="" position="2700,500" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/10.JPG&quot;&gt;
 
 (description 4)
 
@@ -61,7 +61,7 @@ do you answer?
 
 [[i do.-&gt;do]] (make not available until other two endings.)
 
-[[i don&#39;t.-&gt;don&#39;t]]</tw-passagedata><tw-passagedata pid="17" name="do" tags="" position="3025,500" size="100,100">(gif 3)
+[[i don&#39;t.-&gt;don&#39;t]]</tw-passagedata><tw-passagedata pid="17" name="do" tags="" position="3025,500" size="100,100">&lt;img src=&quot;https://GamingBlur.github.io/twinegame/images/GIF3.gif&quot;&gt;
 
 &quot;hey. it&#39;s been a while. just wanted to check in. how are you holding up?&quot; (kacey color maybe?)</tw-passagedata><tw-passagedata pid="18" name="don&#39;t" tags="" position="2850,650" size="100,100">scum.
 
