--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </style>
   </head>
 <body>
-  Hello. My name is Patryk Swierzbinski. I made a game about loneliness.
+  Hello. My name is Patryk Swierzbinski. I made a game about loneliness. If you see this GIF in it, you win.
   <br><br>
   <img src="https://GamingBlur.github.io/twinegame/images/GIF3.gif">
   <br><br>
