--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <br><br>
   <img src="https://GamingBlur.github.io/twinegame/images/GIF3.gif">
   <br><br>
-  <a href="https://GamingBlur.github.io/twinegame/">I hope you enjoy it.</a>
+  <a href="https://GamingBlur.github.io/twinegame/prison.html">I hope you enjoy it.</a>
 </body>
 </html>
